# F117A-remake

./: Cargo.toml  README.md
assets/ai/: f117_ai.toml
assets/fonts/: font-licenses.txt
assets/models/planes/: f117a.gltf
assets/models/vehicles/: SA6.gltf
assets/models/weapons/: AGM-65.gltf  agm-65.glb
assets/terrain/: testmap.blend  testmap.blend1  testmap.glb  testmap.gltf
models-work/: aim9.blend  avmt300.blend  f117a.xcf
models-work/2K12 Kub/: 2K12Kub.3ds  SA6.blend  SA6.blend1
models-work/2K12 Kub/Materials/: Material #950.mat  Material #951.mat  Material #952.mat  Material #953.mat  Material #954.mat  Material #955.mat  Material #956.mat  Material #957.mat
models-work/9P117 Scud B/: 9P117 Scud B.3ds
models-work/9P117 Scud B/Materials/: Material #3633.mat  Material #3634.mat  Material #3635.mat  Material #3636.mat  Material #3637.mat  Material #3638.mat  Material #3639.mat  Material #3640.mat  Material #3641.mat  Material #3642.mat
models-work/9P117 Scud B/Ready Launch/: 3ds file.3DS
models-work/9P117 Scud B/Ready Launch/Materials/: Material #3567.mat  Material #3568.mat  Material #3569.mat  Material #3570.mat  Material #3571.mat  Material #3572.mat  Material #3573.mat  Material #3574.mat  Material #3575.mat  Material #3576.mat
models-work/AGM-65/: AGM-65.blend  Missile AGM-65.3ds  Missile AGM-65.dae  Missile AGM-65.fbx  Missile AGM-65.ply
models-work/PGZ-95 MCP/Materials/: DrawCall_1246Mat.mat  DrawCall_1247Mat.mat  DrawCall_1249Mat.mat  DrawCall_1250Mat.mat  DrawCall_1317Mat.mat
models-work/SAM Site/: sam.3ds
models-work/SAM Site/Materials/: Material #4557.mat  Material #4558.mat  Material #4559.mat
models-work/SHIP/: ship.3ds
src/: aircraft.rs  bevy_scene_hook.rs  billboard.rs  coalition.rs  definitions.rs  dialog_ui.rs  explosion.rs  f117_ai.rs  health.rs  hud.rs  main.rs  map_mfd.rs  mfd.rs  missile.rs  player.rs  pointlight.rs  radar.rs  rwr.rs  sam.rs  scenery.rs  targeting.rs  terrain.rs  util.rs  vehicle.rs
